Moved and renamed appropriate images for report

--- a/RohdeAndSchwarzWhitePaper/Draft_White_Paper.tex
+++ b/RohdeAndSchwarzWhitePaper/Draft_White_Paper.tex
@@ -713,9 +713,17 @@ Figure \ref{fig:ACResp56nh} shows the simulated AC response of our 10 ladder lon
 
 \begin{figure}[htb]
 \centering
-\includegraphics[width=0.4\textwidth,page={1}]{images/probed_noSeriesResistance.pdf}
+\includegraphics[width=0.4\textwidth,page={1}]{Probed_Input_N10_N240_NoSeriesResistance.pdf}
+\caption{\
+}\label{fig:ProbedTransientNoSer}
 \end{figure}
 
+\begin{figure}[htb]
+\centering
+\includegraphics[width=0.4\textwidth,page={1}]{Probed_Input_N10_N240_With_SeriesResistance.pdf}
+\caption{\
+}\label{fig:ProbedTransientYesSer}
+\end{figure}
 
 
 
