Moved image directories for easier access

--- a/RohdeAndSchwarzWhitePaper/Draft_White_Paper.tex
+++ b/RohdeAndSchwarzWhitePaper/Draft_White_Paper.tex
@@ -795,9 +795,9 @@ Through use of this fixture, we were able to generate the curves shown in figure
 
 \begin{figure}[htb]
 \centering
-\includegraphics[width=0.45\textwidth]{}
-\caption{}
-\label{}
+\includegraphics[width=0.45\textwidth]{ACResponseB1}
+\caption{Simulated AC Response for Board 1}
+\label{fig:simACBoard1}
 \end{figure}
 
 
