Added AC Response Section and filled in more detail for each section

--- a/RohdeAndSchwarzWhitePaper/mybib.bib
+++ b/RohdeAndSchwarzWhitePaper/mybib.bib
@@ -180,4 +180,7 @@
   number={11},
   pages={1002-1004},}
 
-
+@misc{giangrandi,
+	url={https://www.giangrandi.org/electronics/ringdownq/ringdownq.shtml},
+	journal={Measuring the Q-factor of a resonator with the ring-down method},
+	author={Giangrandi, Iacopo}}
