--- a/RohdeAndSchwarzWhitePaper/mybib.bib
+++ b/RohdeAndSchwarzWhitePaper/mybib.bib
@@ -184,3 +184,13 @@
 	url={https://www.giangrandi.org/electronics/ringdownq/ringdownq.shtml},
 	journal={Measuring the Q-factor of a resonator with the ring-down method},
 	author={Giangrandi, Iacopo}}
+	
+	
+@ARTICLE{SimpleRelative,
+  author={A. {Namba} and O. {Wada} and Y. {Toyota} and Y. {Fukumoto} and  {Zhi Liang Wang} and R. {Koga} and T. {Miyashita} and T. {Watanabe}},
+  journal={IEEE Transactions on Electromagnetic Compatibility}, 
+  title={A simple method for measuring the relative permittivity of printed circuit board materials}, 
+  year={2001},
+  volume={43},
+  number={4},
+  pages={515-519},}
