Small random edits

--- a/RohdeAndSchwarzWhitePaper/Draft_White_Paper.tex
+++ b/RohdeAndSchwarzWhitePaper/Draft_White_Paper.tex
@@ -424,9 +424,9 @@ and replicate the pulse sharpening effect shown in the literature.
 
 First, we discuss the necessity of non-linear components in such a Nonlinear
 Transmission line or \emph{NLTL} for short. We then discuss ways in which the
-devices we use in simulation are modeled and the obstacles we faced in constructing
-these models. We simulate these nonlinear lines using MICROCAP and discuss
-possible reasons for the discrepancies we have seen between research and
+devices we use in simulation are modeled and the obstacles we faced in
+constructing these models. We simulate these nonlinear lines using MICROCAP and
+discuss possible reasons for the discrepancies we have seen between research and
 simulations.
 
 To verify the characteristic capacitance-voltage or CV curves of our chosen
