--- a/RohdeAndSchwarzWhitePaper/mybib.bib
+++ b/RohdeAndSchwarzWhitePaper/mybib.bib
@@ -150,6 +150,17 @@
 } 
 
 
+@article{afshari2005nonlinear,
+  title={Nonlinear transmission lines for pulse shaping in silicon},
+  author={Afshari, Ehsan and Hajimiri, Ali},
+  journal={IEEE Journal of Solid-State Circuits},
+  volume={40},
+  number={3},
+  pages={744--752},
+  year={2005},
+  publisher={IEEE}
+}
+
 
 @inproceedings{cure2012non,
   title={Non-uniform bias enhancement of a varactor-tuned FSS used with a low profile 2.4 GHz dipole antenna},
@@ -194,3 +205,12 @@
   volume={43},
   number={4},
   pages={515-519},}
+  
+  
+  
+  @misc{shocklineNLTL,
+  title={Shockline NLTL},
+  url={https://www.anritsu.com/en-us/test-measurement/technologies/shockline-nltl},
+  journal={Shockline NLTL | Anritsu America},
+  publisher={Anritsu America},
+  year={2020}}
